Responsive design, footer, meta tags

--- a/index.html
+++ b/index.html
@@ -8,9 +8,24 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>Who Is Michael Suen?</title>
-	<meta name="description" content="">
-	<meta name="author" content="">
+	<title>Who Is Michael Suen? - Designer, Illustrator, Writer</title>
+	<meta name="description" content="Do you need help designing playful websites, apps, or campaigns? Michael Suen blends UX design, front-end development, illustration, gamification, and content marketing to build experiences people love to use.">
+	<meta name="author" content="Michael Suen">
+	<meta name="designer" content="Michael Suen">
+	<meta name="google-site-verification" content="JYPklBZTVVtNfcz6mRTOFUdGouR_hsiRSAiezyhvrJE" />
+	<meta property="og:title" content="Who Is Michael Suen? - Designer, Illustrator, Writer" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="http://www.whoismichaelsuen.com/" />
+	<meta property="og:image" content="http://www.whoismichaelsuen.com/images/bg@mobile.png" />
+	<meta property="og:image" content="http://www.whoismichaelsuen.com/images/me-icon.png" />
+	<meta property="og:description" content="Do you need help designing playful websites, apps, or campaigns? Michael Suen blends UX design, front-end development, illustration, gamification, and content marketing to build experiences people love to use." />
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:url" content="http://www.whoismichaelsuen.com/">
+	<meta name="twitter:title" content="Who Is Michael Suen? - Designer, Illustrator, Writer">
+	<meta name="twitter:description" content="Do you need help designing websites, apps or campaigns? Michael Suen blends design, illustration and marketing to build playful experiences.">
+	<meta name="twitter:image" content="http://www.whoismichaelsuen.com/images/me-icon.png" />
+	<meta name="twitter:site" content="@poetichentai">
+	<meta name="twitter:creator" content="@poetichentai">
 
 	<!-- Mobile Specific Metas
   ================================================== -->
@@ -43,13 +58,11 @@
 	<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
 	<script src="js/jquery.leanModal.min.js"></script>
 	<script src="js/twitterFetcher_min.js"></script>
-	<!-- <script src="js/waypoint.js"></script> -->
-	<!-- <script src="js/modernizr.js"></script> -->
-	<!-- <script src="js/jquery.easing.1.3.js"></script> -->
+	<script src="js/modernizr.js"></script>
 </head>
 <body>
 	<div id="parallax">
-		<header class="animated fadeIn">
+		<header class="animated fadeIn desktop">
 			<h1>Michael Suen</h1><h6>Designer. Illustrator. Writer.</h6>
 		</header>
 		<div class="parallax__layer parallax__layer__1">
@@ -76,9 +89,14 @@
 		<div class="parallax__layer parallax__layer__8">
 			<img src="images/bg1@2x.png">
 		</div>
+		<div class="no_parallax_mobile__layer">
+			<header>
+			<h1>Michael Suen</h1><h6>Designer. Illustrator. Writer.</h6>
+			</header>
+		</div>
 		<div class="parallax__cover">
 			<div class="container" id="parallax-container">
-				<p class="notice"><em>Portfolio coming soon.</em></p>
+				<p class="notice"><em>Portfolio available upon request.</em></p>
 				<div class="slide group" id="about">
 					<center>
 						<div class="sixteen columns add-top">
@@ -93,8 +111,8 @@
 							<div class="row">
 								<div class="eight columns offset-by-four omega">
 									<p class="align-left"><strong>I'm a designer, illustrator, and writer.</strong> My <a href="#" class="workplay"><span>work</span></a> emphasizes user-friendly interactive experiences that blur the line between <a href="#" class="workplay"><span>work</span></a> and <a href="#" class="playwork"><span>play</span></a>. I <a href="#" class="workplay"><span>work</span></a> with startups, small businesses, and creative entrepreneurs to design playful web products and campaigns that audiences love to use. </p>
-									<p class="align-left">Projects I've <a href="#" class="workedplayed"><span>worked on</span></a> have been featured in Wired, TechCrunch, NPR, Kill Screen, and Voice of America. I've spoken about game-based learning, new media culture, and digital humanities at MIT, Brown University, York University, and Bryn Mawr College. In a former life, I produced games and digital content at the award-winning MIT spin-off &nbsp;<a href="http://www.learninggamesnetwork.org/">Learning Games Network</a>.</p>
-									<p class="align-left">Spawned in the <a href="#tarpits" rel="leanModal">tar pits</a> of L.A., raised by <a href="#capitalist" rel="leanModal">capitalist wolves</a> in Hong Kong, and educated on the <a href="http://en.wikipedia.org/wiki/Middlebury_College" target="_blank">ice planet</a> of Vermont, I now live in Cambridge, MA with my PlayStation 3.</p>
+									<p class="align-left">Projects I've <a href="#" class="workedplayed"><span>worked on</span></a> have been featured in Wired, TechCrunch, NPR, and Kill Screen. I've spoken about game-based learning, new media culture, and digital humanities at MIT, Brown University, and York University. In a former life, I produced games and digital content at the award-winning MIT spin-off &nbsp;<a href="http://www.learninggamesnetwork.org/">Learning Games Network</a>.</p>
+									<p class="align-left">Spawned in the <a href="#tarpits" rel="leanModal">tar pits</a> of L.A., raised by <a href="#capitalist" rel="leanModal">capitalist wolves</a> in Hong Kong, and educated on the <a href="http://en.wikipedia.org/wiki/Middlebury_College" target="_blank">ice planet</a> of Vermont, I now live in Cambridge, MA with my PlayStation.</p>
 								</div>
 							</div>
 							<div class="row fourth-top">
@@ -106,50 +124,8 @@
 						</div>
 					</center>
 				</div>
-				<!-- <div class="slide" id="portfolio">
-					<a href="/lgn/">
-						<div class="item" id="lgn">
-						</div>
-					</a>
-					<a href="/unaoc/">
-						<div class="item" id="unaoc">
-						</div>
-					</a>
-					<a href="/xenos/">
-						<div class="item" id="xenos">
-						</div>
-					</a>
-					<a href="/quandary/">
-						<div class="item" id="quandary">
-						</div>
-					</a>
-					<a href="/courtship/">
-						<div class="item" id="courtship">
-						</div>
-					</a>
-					<a href="/simon-dene/">
-						<div class="item" id="simondene">
-						</div>
-					</a>
-					<a href="/label-gear-solid/">
-						<div class="item" id="labelgearsolid">
-						</div>
-					</a>				
-					<a href="/21cb/">
-						<div class="item" id="twentyonecb">
-						</div>
-					</a>
-				</div> -->
-				<!--<div class="slide" id="testimonial">
-					<center>
-					<h4>What do people think of Michael Suen?</h4>
-					</center>
-					<div class="row">
-						<blockquote>"Michael is a very talented individual with an impressive combination of skill-sets. His role at Learning Games Network covered varied ground and helped transition our organisation from fledgling start-up to award-winning studio. He's a speedy yet proficient writer with the ability to hit exactly the right tone. He's technically savvy, able to plan, design and code a custom website against tight deadlines. And he has a great eye for design and art direction, visioneering slick promo videos, wireframing user interfaces, and designing logos and other marketing assets. Michael is both a big and quick thinker, who also gets things done. His passion for media is infectious, and his knowledge deep. He is a pleasure to work with, has a great sense of humour and a personality that brings out the best in others."
-					</div>
-				</div>-->
 				<div class="slide" id="social">
-					<div class="row vertical-align">
+					<div class="row" id="social-center">
 						<div class="twelve columns offset-by-three">
 							<h4 class="add-bottom">These Are A Few of My Favorite Things</h4>
 							<hr class="align-left">
@@ -158,7 +134,7 @@
 									<div><i class="fa fa-road fa-fw"></i> <span>Travel</span></div>
 									<div><i class="fa fa-gamepad fa-fw"></i> <span>Games</span></div>
 									<div><i class="fa fa-beer fa-fw"></i> <span>IPAs</span></div>
-									<div><i class="fa fa-tree fa-fw"></i> <span>The Outdoors</span></div>
+									<div><i class="fa fa-tree fa-fw"></i> <span>Outdoors</span></div>
 								</div>
 						</div>
 						<div class="five columns offset-by-three clearfix">
@@ -208,7 +184,7 @@
 								</blockquote>
 						</div>
 						<div class="contact-bottom">
-							<div class="vertical-align">
+							<div class="vertical-align email-me">
 								<p><strong>Want to hire me?</strong> I'm currently booked solid until March 2015, after which one slot will open up — though not for long! Let's start a conversation.</p>
 								<!-- Begin MailChimp Signup Form -->
 								<div id="mc_embed_signup">
@@ -236,6 +212,10 @@
 				</div>
 			</div>
 		</div>
+		<div class="copyright-props">
+			<p class="copyright vertical-align">© 2014-2015</p>
+			<p class="props vertical-align">Inspired by Campo Santo's website for the game <a href="http://www.firewatchgame.com" target="_blank">Firewatch</a>. Powered by <a href="http://www.getskeleton.com" target="_blank">Skeleton</a>.</p>
+		</div>
 	</div>
 	<div id="tarpits">
 		<img src="https://farm8.staticflickr.com/7188/6970635809_aee672164c.jpg">
@@ -244,5 +224,16 @@
 		<img src="images/lufsig-hk.jpg">
 	</div>
 	<script src="js/script.js"></script>
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-13275851-5', 'auto');
+	  ga('require', 'linkid', 'linkid.js');
+	  ga('send', 'pageview');
+
+	</script>
 </body>
 </html>
