--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 			</div>
 		</div>
 		<div class="copyright-props">
-			<p class="copyright vertical-align">© 2014-2015</p>
+			<p class="copyright vertical-align">© Copyright 2014-2015 Suen Labs</p>
 			<p class="props vertical-align">Inspired by Campo Santo's website for the game <a href="http://www.firewatchgame.com" target="_blank">Firewatch</a>. Powered by <a href="http://www.getskeleton.com" target="_blank">Skeleton</a>.</p>
 		</div>
 	</div>
