--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 		</div>
 		<div class="copyright-props">
 			<p class="copyright vertical-align">© Copyright 2014-2015 Suen Labs</p>
-			<p class="props vertical-align">Inspired by Campo Santo's website for the game <a href="http://www.firewatchgame.com" target="_blank">Firewatch</a>. Powered by <a href="http://www.getskeleton.com" target="_blank">Skeleton</a>.</p>
+			<p class="props vertical-align">Inspired by Campo Santo's website for the game <a href="http://www.firewatchgame.com" target="_blank">Firewatch</a>. Powered by <a href="http://www.getskeleton.com" target="_blank">Skeleton</a>. The serif is <a href="http://www.typography.com/fonts/sentinel/overview/" target="_blank">Sentinel</a> and the sans-serif is <a href="http://www.typography.com/fonts/verlag/overview/" target="_blank">Verlag</a>, both by Hoefler &amp; Co.</p>
 		</div>
 	</div>
 	<div id="tarpits">
