Added current reading and music

--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
 				<div class="slide" id="social">
 					<div class="row" id="social-center">
 						<div class="twelve columns offset-by-three">
-							<h4 class="add-bottom">These Are A Few of My Favorite Things</h4>
+							<h4>These Are A Few of My Favorite Things</h4>
 							<hr class="align-left">
-								<div class="favorite-things add-4x-bottom">
+								<div class="favorite-things add-2x-bottom">
 									<div><i class="fa fa-rebel fa-fw"></i> <span>Star Wars</span></div>
 									<div><i class="fa fa-road fa-fw"></i> <span>Travel</span></div>
 									<div><i class="fa fa-gamepad fa-fw"></i> <span>Games</span></div>
@@ -138,7 +138,23 @@
 								</div>
 						</div>
 						<div class="five columns offset-by-three clearfix">
-							<h4 class="add-bottom">First Contact</h4>
+							<h4>Current Reading</h4>
+							<hr class="align-left">
+							<div class="now-reading add-2x-bottom">
+								<img src="../images/now-reading.jpg" class="now-reading">
+								<p><a href="https://www.goodreads.com/book/show/567610.How_to_Read_a_Book" target="_blank"><em>How to Read a Book: The Classic Guide to Intelligent Reading</em></a> by Mortimer J. Adler &amp; Charles Van Doren</p>
+							</div>
+						</div>
+						<div class="five columns clearfix">
+							<h4>Current Music</h4>
+							<hr class="align-left">
+							<div class="now-listening add-2x-bottom">
+								<img src="../images/now-listening.jpg" class="now-listening">
+								<p><a href="http://chipocrite.bandcamp.com/track/wordplay"><em>Wordplay</em></a> by Chipocrite</p>
+							</div>
+						</div>
+						<div class="five columns offset-by-three clearfix" style="clear: both;">
+							<h4>First Contact</h4>
 							<hr class="align-left">
 							<div class="eight columns social-icons">
 								<a href="skype:m.suen?chat"><i class="fa fa-skype fa-fw"></i> <span>Skype</span></a>
@@ -154,7 +170,7 @@
 							</div>
 						</div>
 						<div class="five columns">
-							<h4 class="add-bottom">Latest Tweets</h4>
+							<h4>Latest Tweets</h4>
 							<hr class="align-left">
 							<div id="ms-tweets"></div>
 							<script>
@@ -185,7 +201,7 @@
 						</div>
 						<div class="contact-bottom">
 							<div class="vertical-align email-me">
-								<p><strong>Want to hire me?</strong> I'm currently booked solid until March 2015, after which one slot will open up — though not for long! Let's start a conversation.</p>
+								<p><strong>Want to hire me?</strong> I'm currently booked until March, after which I'll have limited availability for new projects. Get in touch if you think we'd be a good fit.</p>
 								<!-- Begin MailChimp Signup Form -->
 								<div id="mc_embed_signup">
 								<form action="//whoismichaelsuen.us10.list-manage.com/subscribe/post?u=4ece89052ce51cd658a6e3155&amp;id=92a752c854" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
@@ -214,7 +230,7 @@
 		</div>
 		<div class="copyright-props">
 			<p class="copyright vertical-align">© Copyright 2014-2015 Suen Labs</p>
-			<p class="props vertical-align">Inspired by Campo Santo's website for the game <a href="http://www.firewatchgame.com" target="_blank">Firewatch</a>. Powered by <a href="http://www.getskeleton.com" target="_blank">Skeleton</a>. The serif is <a href="http://www.typography.com/fonts/sentinel/overview/" target="_blank">Sentinel</a> and the sans-serif is <a href="http://www.typography.com/fonts/verlag/overview/" target="_blank">Verlag</a>, both by Hoefler &amp; Co.</p>
+			<p class="props vertical-align">Inspired by Campo Santo's website for the game <a href="http://www.firewatchgame.com" target="_blank">Firewatch</a>. Powered by <a href="http://www.getskeleton.com" target="_blank">Skeleton</a>.</p>
 		</div>
 	</div>
 	<div id="tarpits">
