--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   ================================================== -->
 	<meta charset="utf-8">
 	<title>Who Is Michael Suen? - Designer, Illustrator, Writer</title>
-	<meta name="description" content="Do you need help designing playful websites, apps, or campaigns? Michael Suen blends UX design, front-end development, illustration, gamification, and content marketing to build experiences people love to use.">
+	<meta name="description" content="Do you need help designing playful websites, apps, or campaigns? Michael Suen blends UX design, front-end development, illustration, gamification, and content marketing to build experiences that audiences love to use and share.">
 	<meta name="author" content="Michael Suen">
 	<meta name="designer" content="Michael Suen">
 	<meta name="google-site-verification" content="JYPklBZTVVtNfcz6mRTOFUdGouR_hsiRSAiezyhvrJE" />
@@ -18,7 +18,7 @@
 	<meta property="og:url" content="http://www.whoismichaelsuen.com/" />
 	<meta property="og:image" content="http://www.whoismichaelsuen.com/images/bg@mobile.png" />
 	<meta property="og:image" content="http://www.whoismichaelsuen.com/images/me-icon.png" />
-	<meta property="og:description" content="Do you need help designing playful websites, apps, or campaigns? Michael Suen blends UX design, front-end development, illustration, gamification, and content marketing to build experiences people love to use." />
+	<meta property="og:description" content="Do you need help designing playful websites, apps, or campaigns? Michael Suen blends UX design, front-end development, illustration, gamification, and content marketing to build experiences that audiences love to use and share." />
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:url" content="http://www.whoismichaelsuen.com/">
 	<meta name="twitter:title" content="Who Is Michael Suen? - Designer, Illustrator, Writer">
