--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 						</div>
 						<div class="contact-bottom">
 							<div class="vertical-align email-me">
-								<p><strong>Want to hire me?</strong> I'm currently booked until March, after which I'll have limited availability for new projects. Get in touch if you think we'd be a good fit.</p>
+								<p><strong>Want to hire me?</strong> I'm currently booked until March, after which I'll be available for a new project. Get in touch if you think we'd be a good fit.</p>
 								<!-- Begin MailChimp Signup Form -->
 								<div id="mc_embed_signup">
 								<form action="//whoismichaelsuen.us10.list-manage.com/subscribe/post?u=4ece89052ce51cd658a6e3155&amp;id=92a752c854" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
