--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 							<hr class="align-left">
 							<div class="now-listening add-2x-bottom">
 								<img src="../images/now-listening.jpg" class="now-listening">
-								<p><a href="http://chipocrite.bandcamp.com/track/wordplay"><em>Wordplay</em></a> by Chipocrite</p>
+								<p><a href="http://chipocrite.bandcamp.com/album/wordplay"><em>Wordplay</em></a> by Chipocrite</p>
 							</div>
 						</div>
 						<div class="five columns offset-by-three clearfix" style="clear: both;">
