--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   ================================================== -->
 	<meta charset="utf-8">
 	<title>Who Is Michael Suen? - Designer, Illustrator, Writer</title>
-	<meta name="description" content="Do you need help designing playful websites, apps, or campaigns? Michael Suen blends UX design, front-end development, illustration, gamification, and content marketing to build experiences that audiences love to use and share.">
+	<meta name="description" content="Do you need help designing playful websites, apps, or campaigns? Michael Suen blends UX design, front-end development, illustration, gamification, and content marketing to build experiences that audiences love to use.">
 	<meta name="author" content="Michael Suen">
 	<meta name="designer" content="Michael Suen">
 	<meta name="google-site-verification" content="JYPklBZTVVtNfcz6mRTOFUdGouR_hsiRSAiezyhvrJE" />
@@ -18,7 +18,7 @@
 	<meta property="og:url" content="http://www.whoismichaelsuen.com/" />
 	<meta property="og:image" content="http://www.whoismichaelsuen.com/images/bg@mobile.png" />
 	<meta property="og:image" content="http://www.whoismichaelsuen.com/images/me-icon.png" />
-	<meta property="og:description" content="Do you need help designing playful websites, apps, or campaigns? Michael Suen blends UX design, front-end development, illustration, gamification, and content marketing to build experiences that audiences love to use and share." />
+	<meta property="og:description" content="Do you need help designing playful websites, apps, or campaigns? Michael Suen blends UX design, front-end development, illustration, gamification, and content marketing to build experiences that audiences love to use." />
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:url" content="http://www.whoismichaelsuen.com/">
 	<meta name="twitter:title" content="Who Is Michael Suen? - Designer, Illustrator, Writer">
@@ -141,7 +141,7 @@
 							<h4>Current Reading</h4>
 							<hr class="align-left">
 							<div class="now-reading add-2x-bottom">
-								<img src="../images/now-reading.jpg" class="now-reading">
+								<a href="#current-reading" rel="leanModal"><img src="../images/now-reading.jpg" class="now-reading"></a>
 								<p><a href="https://www.goodreads.com/book/show/567610.How_to_Read_a_Book" target="_blank"><em>How to Read a Book: The Classic Guide to Intelligent Reading</em></a> by Mortimer J. Adler &amp; Charles Van Doren</p>
 							</div>
 						</div>
@@ -149,7 +149,7 @@
 							<h4>Current Music</h4>
 							<hr class="align-left">
 							<div class="now-listening add-2x-bottom">
-								<img src="../images/now-listening.jpg" class="now-listening">
+								<a href="#current-music" rel="leanModal"><img src="../images/now-listening.jpg" class="now-listening"></a>
 								<p><a href="http://chipocrite.bandcamp.com/album/3p"><em>3P</em></a> by Chipocrite</p>
 							</div>
 						</div>
@@ -235,6 +235,12 @@
 	</div>
 	<div id="tarpits">
 		<img src="https://farm8.staticflickr.com/7188/6970635809_aee672164c.jpg">
+	</div>
+	<div id="current-reading">
+		<img src="images/now-reading.jpg">
+	</div>
+	<div id="current-music">
+		<img src="images/now-listening.jpg">
 	</div>
 	<div id="capitalist">
 		<img src="images/lufsig-hk.jpg">
