Fixed medium link

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 								<a href="mailto:michael@suenlabs.com"><i class="fa fa-envelope fa-fw"></i> <span>E-mail</span></a>
 								<a href="http://www.twitter.com/poetichentai"><i class="fa fa-twitter fa-fw"></i> <span>Twitter</span></a>
 								<a href="https://www.behance.net/msuen"><i class="fa fa-behance fa-fw"></i> <span>Behance</span></a>
-								<a href="http://www.medium.com/poetichentai"><i class="fa fa-medium fa-fw"></i> <span>Medium</span></a>
+								<a href="http://www.medium.com/@poetichentai"><i class="fa fa-medium fa-fw"></i> <span>Medium</span></a>
 							</div>
 						</div>
 						<div class="five columns">
