--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 								</div>
 						</div>
 						<div class="five columns offset-by-three clearfix">
-							<h4>Current Reading</h4>
+							<h4>Currently Reading</h4>
 							<hr class="align-left">
 							<div class="now-reading add-2x-bottom">
 								<a href="#current-reading" rel="leanModal"><img src="../images/now-reading.jpg" class="now-reading"></a>
@@ -155,7 +155,7 @@
 							</div>
 						</div>
 						<div class="five columns clearfix">
-							<h4>Current Music</h4>
+							<h4>Currently Listening</h4>
 							<hr class="align-left">
 							<div class="now-listening add-2x-bottom">
 								<a href="#current-music" rel="leanModal"><img src="../images/now-listening.jpg" class="now-listening"></a>
