Updated now list

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   ================================================== -->
 	<meta charset="utf-8">
 	<title>Who Is Michael Suen? - Designer, Illustrator, Writer</title>
-	<meta name="description" content="Need a one-man Swiss Army knife to design your website, app, or campaign? Michael Suen blends graphic design, game design, front-end development, and digital marketing to build experiences that audiences love to use.">
+	<meta name="description" content="Michael Suen blends web design, graphic design, game design, and digital marketing to build digital products and brand experiences that audiences love to use.">
 	<meta name="author" content="Michael Suen">
 	<meta name="designer" content="Michael Suen">
 	<meta name="google-site-verification" content="JYPklBZTVVtNfcz6mRTOFUdGouR_hsiRSAiezyhvrJE" />
@@ -18,11 +18,11 @@
 	<meta property="og:url" content="http://www.whoismichaelsuen.com/" />
 	<meta property="og:image" content="http://www.whoismichaelsuen.com/images/bg@mobile.png" />
 	<meta property="og:image" content="http://www.whoismichaelsuen.com/images/favicon-196x196.png" />
-	<meta property="og:description" content="Need a one-man Swiss Army knife to design your website, app, or campaign? Michael Suen blends graphic design, game design, front-end development, and digital marketing to build experiences that audiences love to use." />
+	<meta property="og:description" content="Need a one-man Swiss Army knife to design your brand, website, or digital product? Michael Suen blends web design, graphic design, game design, and digital marketing to build experiences that audiences love to use." />
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:url" content="http://www.whoismichaelsuen.com/">
 	<meta name="twitter:title" content="Who Is Michael Suen? - Designer, Illustrator, Writer">
-	<meta name="twitter:description" content="Do you need help designing websites, apps or campaigns? Michael Suen blends design, illustration and marketing to build playful experiences.">
+	<meta name="twitter:description" content="Need help designing your brand, website, or digital product? Michael Suen blends design, illustration and marketing to build playful experiences.">
 	<meta name="twitter:image" content="http://www.whoismichaelsuen.com/images/favicon-196x196.png" />
 	<meta name="twitter:site" content="@poetichentai">
 	<meta name="twitter:creator" content="@poetichentai">
@@ -66,8 +66,6 @@
 	================================================== -->
 	<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.4/waypoints.min.js"></script>
-	<script type="text/javascript" src="js/responsiveCarousel.min.js"></script>
-	<script type="text/javascript" src="js/jquery.leanModal.min.js"></script>
 	<script type="text/javascript" src="js/twitterFetcher_min.js"></script>
 	<script type="text/javascript" src="js/modernizr.js"></script>
 </head>
@@ -286,29 +284,29 @@
 						<div class="four columns alpha clearfix">
 							<h4>Now Reading</h4>
 							<div class="now-reading add-2x-bottom">
-								<a href="https://www.goodreads.com/book/show/567610.How_to_Read_a_Book" target="_blank"><div class="now-reading-image"></div></a>
-								<p><a href="https://www.goodreads.com/book/show/567610.How_to_Read_a_Book" target="_blank"><em>How to Read a Book</em></a> by Mortimer J. Adler &amp; Charles Van Doren</p>
+								<a href="http://www.amazon.com/gp/product/0991918665/ref=as_li_tl?ie=UTF8&camp=211189&creative=373489&creativeASIN=0991918665&link_code=as3&tag=210c7c-20&linkId=SLUQAXRFSBNXYLBF" target="_blank"><div class="now-reading-image"></div></a>
+								<p><a href="http://www.amazon.com/gp/product/0991918665/ref=as_li_tl?ie=UTF8&camp=211189&creative=373489&creativeASIN=0991918665&link_code=as3&tag=210c7c-20&linkId=SLUQAXRFSBNXYLBF" target="_blank"><em>The Good Creative</em></a>, by Paul Jarvis</p>
 							</div>
 						</div>
 						<div class="four columns clearfix">
 							<h4>Now Listening</h4>
 							<div class="now-listening add-2x-bottom">
-								<a href="http://chipocrite.bandcamp.com/album/3p" target="_blank"><div class="now-listening-image"></div></a>
-								<p><a href="http://chipocrite.bandcamp.com/album/3p" target="_blank"><em>3P</em></a> by Chipocrite</p>
+								<a href="http://www.amazon.com/gp/product/B00S22AGBG/ref=as_li_tl?ie=UTF8&camp=211189&creative=373489&creativeASIN=B00S22AGBG&link_code=as3&tag=210c7c-20&linkId=5YCRO3STXESE3CY4" target="_blank"><div class="now-listening-image"></div></a>
+								<p><a href="http://www.amazon.com/gp/product/B00S22AGBG/ref=as_li_tl?ie=UTF8&camp=211189&creative=373489&creativeASIN=B00S22AGBG&link_code=as3&tag=210c7c-20&linkId=5YCRO3STXESE3CY4" target="_blank"><em>Adventure</em></a>, by Madeon</p>
 							</div>
 						</div>
 						<div class="four columns clearfix">
 							<h4>Now Watching</h4>
 							<div class="now-watching add-2x-bottom">
-								<a href="http://letterboxd.com/film/what-we-do-in-the-shadows/" target="_blank"><div class="now-watching-image"></div></a>
-								<p><a href="http://letterboxd.com/film/what-we-do-in-the-shadows/" target="_blank"><em>What We Do In The Shadows</em></a>, directed by Taika Waititi &amp; Jemaine Clement</p>
+								<a href="http://www.amazon.com/gp/product/B00HLTD8RA/ref=as_li_tl?ie=UTF8&camp=211189&creative=373489&creativeASIN=B00HLTD8RA&link_code=as3&tag=210c7c-20&linkId=WCMTT3MPWTB3HPK7" target="_blank"><div class="now-watching-image"></div></a>
+								<p><a href="http://www.amazon.com/gp/product/B00HLTD8RA/ref=as_li_tl?ie=UTF8&camp=211189&creative=373489&creativeASIN=B00HLTD8RA&link_code=as3&tag=210c7c-20&linkId=WCMTT3MPWTB3HPK7" target="_blank"><em>Furious 7</em></a>, directed by James Wan</p>
 							</div>
 						</div>
 						<div class="four columns omega clearfix">
 							<h4>Now Playing</h4>
 							<div class="now-playing add-2x-bottom">
-								<a href="http://www.polygon.com/game/middle-earth-shadow-of-mordor/15758" target="_blank"><div class="now-playing-image"></div></a>
-								<p><a href="http://www.polygon.com/game/middle-earth-shadow-of-mordor/15758" target="_blank"><em>Shadows of Mordor</em></a>, by Monolith Productions</p>
+								<a href="http://www.amazon.com/gp/product/B00GDI4HX4/ref=as_li_tl?ie=UTF8&camp=211189&creative=373489&creativeASIN=B00GDI4HX4&link_code=as3&tag=210c7c-20&linkId=KPJVNV3IWSLAGWGI" target="_blank"><div class="now-playing-image"></div></a>
+								<p><a href="http://www.amazon.com/gp/product/B00GDI4HX4/ref=as_li_tl?ie=UTF8&camp=211189&creative=373489&creativeASIN=B00GDI4HX4&link_code=as3&tag=210c7c-20&linkId=KPJVNV3IWSLAGWGI" target="_blank"><em>Coup</em></a>, by Indie Boards &amp; Cards</p>
 							</div>
 						</div>
 					</div>
@@ -364,8 +362,9 @@
 	<div id="capitalist">
 		<img src="images/lufsig-hk.jpg">
 	</div>
-	<script src="js/script.js"></script>
-	<script src="js/typed.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
+	<script type="text/javascript" src="js/typed.js"></script>
+	<script type="text/javascript" src="js/jquery.leanModal.min.js"></script>
 	<script>
 	  $(function(){
 	      $(".typewriter").typed({
