--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 							</div>
 						</div>
 						<div class="four columns clearfix">
-							<h4>Now Watching</h4>
+							<h4>Now Viewing</h4>
 							<div class="now-watching add-2x-bottom">
 								<a href="http://www.amazon.com/gp/product/B00HLTD8RA/ref=as_li_tl?ie=UTF8&camp=211189&creative=373489&creativeASIN=B00HLTD8RA&link_code=as3&tag=210c7c-20&linkId=WCMTT3MPWTB3HPK7" target="_blank"><div class="now-watching-image"></div></a>
 								<p><a href="http://www.amazon.com/gp/product/B00HLTD8RA/ref=as_li_tl?ie=UTF8&camp=211189&creative=373489&creativeASIN=B00HLTD8RA&link_code=as3&tag=210c7c-20&linkId=WCMTT3MPWTB3HPK7" target="_blank"><em>Furious 7</em></a>, directed by James Wan</p>
