--- a/index.html
+++ b/index.html
@@ -105,7 +105,6 @@
 		</div>
 		<div class="parallax__cover">
 			<div class="container" id="parallax-container">
-				<p class="notice" onclick="location.href = '#contact'"><em>Want to have coffee over Skype?</em></p>
 				<div class="slide group" id="about">
 					<center>
 						<div class="sixteen columns add-top">
@@ -185,7 +184,7 @@
 								<li class="if">Launch a digital product, service, or brand that is bold, beautiful, and <strong>ready for business on day one</strong>?</li>
 								<li class="if">Introduce playful user journeys and interactions that <strong>drive behavior and engagement</strong> just the way you want it?</li>
 							</ul>
-							<p>If so, you might be in the right place. Most of my engagements range from $1,000 - $6,000. To learn more about my services, please <a href="#contact">get in touch.</a></p>
+							<p>If so, you might be in the right place. Website projects typically start at $5,000. To learn more about my services, please <a href="#contact">get in touch.</a></p>
 							<blockquote>
 								<p>Michael is a very talented individual with an impressive combination of skill-sets. His role covered varied ground and helped transition our organisation from fledgling start-up to award winning studio. He's a speedy yet proficient writer with the ability to hit exactly the right tone. He's able to plan, design and code a custom website against tight deadlines. He has a great eye for design and art direction. Michael is both a big and quick thinker, who also gets things done. His passion for media is infectious, and his knowledge deep.</p>
 								<cite>Peter Stidwill, Learning Games Network</cite>
@@ -253,7 +252,7 @@
 						<div class="ten columns offset-by-three alpha omega animated" id="sign-up" data-animated="fadeInUp">
 							<h2>Let's <span class="typewriter">build</span>something together.</h2>
 							<div class="email-me fourteen columns offset-by-one alpha omega">
-								<p><strong>Want to hire me?</strong> I'm available for new part-time projects starting in March. Leave me your e-mail and we'll have a coffee over Skype!</p>
+								<p><strong>Want to hire me?</strong> I'm currently booked solid until July 2015, but leave me your e-mail and we'll have a coffee over Skype!</p>
 								<!-- Begin MailChimp Signup Form -->
 								<div id="mc_embed_signup">
 								<form action="//whoismichaelsuen.us10.list-manage.com/subscribe/post?u=4ece89052ce51cd658a6e3155&amp;id=92a752c854" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
@@ -298,8 +297,8 @@
 						<div class="four columns clearfix">
 							<h4>Now Viewing</h4>
 							<div class="now-watching add-2x-bottom">
-								<a href="http://www.amazon.com/gp/product/B00HLTD8RA/ref=as_li_tl?ie=UTF8&camp=211189&creative=373489&creativeASIN=B00HLTD8RA&link_code=as3&tag=210c7c-20&linkId=WCMTT3MPWTB3HPK7" target="_blank"><div class="now-watching-image"></div></a>
-								<p><a href="http://www.amazon.com/gp/product/B00HLTD8RA/ref=as_li_tl?ie=UTF8&camp=211189&creative=373489&creativeASIN=B00HLTD8RA&link_code=as3&tag=210c7c-20&linkId=WCMTT3MPWTB3HPK7" target="_blank"><em>Furious 7</em></a>, directed by James Wan</p>
+								<a href="http://www.amazon.com/gp/product/B00XOXDXV8/ref=as_li_tl?ie=UTF8&camp=1789&creative=390957&creativeASIN=B00XOXDXV8&linkCode=as2&tag=210c7c-20&linkId=ORGURSE4W6HZYD57" target="_blank"><div class="now-watching-image"></div></a>
+								<p><a href="http://www.amazon.com/gp/product/B00XOXDXV8/ref=as_li_tl?ie=UTF8&camp=1789&creative=390957&creativeASIN=B00XOXDXV8&linkCode=as2&tag=210c7c-20&linkId=ORGURSE4W6HZYD57" target="_blank"><em>Mad Max: Fury Road</em></a>, directed by George Miller</p>
 							</div>
 						</div>
 						<div class="four columns omega clearfix">
@@ -350,18 +349,6 @@
 			<p class="props vertical-align">Inspired by <a href="http://pjrvs.com/work" target="_blank">Paul Jarvis</a> and <a href="http://www.firewatchgame.com" target="_blank">Firewatch</a>. Built using <a href="http://www.getskeleton.com" target="_blank">Skeleton</a> and <a href="http://daneden.github.io/animate.css/" target="_blank">Animate.css</a>.</p>
 		</div>
 	</div>
-	<div id="tarpits">
-		<img src="https://farm8.staticflickr.com/7188/6970635809_aee672164c.jpg">
-	</div>
-	<div id="current-reading">
-		<img src="images/now-reading.jpg">
-	</div>
-	<div id="current-music">
-		<img src="images/now-listening.jpg">
-	</div>
-	<div id="capitalist">
-		<img src="images/lufsig-hk.jpg">
-	</div>
 	<script type="text/javascript" src="js/script.js"></script>
 	<script type="text/javascript" src="js/typed.js"></script>
 	<script type="text/javascript" src="js/jquery.leanModal.min.js"></script>
@@ -386,5 +373,13 @@
 	  ga('send', 'pageview');
 
 	</script>
+</div>
+<p class="notice" onclick="location.href = '#contact'"><em>Want to have coffee over Skype?</em></p>
+<div id="tarpits">
+	<img src="https://farm8.staticflickr.com/7188/6970635809_aee672164c.jpg">
+</div>
+<div id="capitalist">
+	<img src="images/lufsig-hk.jpg">
+</div>
 </body>
 </html>
