--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 
 	</script>
 </div>
-<p class="notice" onclick="location.href = '#contact'"><em>Want to have coffee over Skype?</em></p>
+<!--<p class="notice" onclick="location.href = '#contact'"><em>Want to have coffee over Skype?</em></p>-->
 <div id="tarpits">
 	<img src="https://farm8.staticflickr.com/7188/6970635809_aee672164c.jpg">
 </div>
