Updated with optimizely

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.4/waypoints.min.js"></script>
 	<script type="text/javascript" src="js/twitterFetcher_min.js"></script>
 	<script type="text/javascript" src="js/modernizr.js"></script>
+	<script src="//cdn.optimizely.com/js/2906810202.js"></script>
 </head>
 <body>
 	<div id="parallax">
