--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   ================================================== -->
 	<meta charset="utf-8">
 	<title>Who Is Michael Suen? - Designer, Illustrator, Writer</title>
-	<meta name="description" content="Michael Suen blends web design, graphic design, game design, and digital marketing to build digital products and brand experiences that audiences love to use.">
+	<meta name="description" content="Michael Suen blends web design, graphic design, game design, and digital marketing to build digital products and experiences that audiences love to use.">
 	<meta name="author" content="Michael Suen">
 	<meta name="designer" content="Michael Suen">
 	<meta name="google-site-verification" content="JYPklBZTVVtNfcz6mRTOFUdGouR_hsiRSAiezyhvrJE" />
@@ -253,7 +253,7 @@
 						<div class="ten columns offset-by-three alpha omega animated" id="sign-up" data-animated="fadeInUp">
 							<h2>Let's <span class="typewriter">build</span>something together.</h2>
 							<div class="email-me fourteen columns offset-by-one alpha omega">
-								<p><strong>Want to hire me?</strong> I'm currently booked solid until September 2015, but leave me your e-mail and we'll have a coffee over Skype!</p>
+								<p><strong>I'm booked for the rest of 2015.</strong> Say hello, and we'll get coffee.</p>
 								<!-- Begin MailChimp Signup Form -->
 								<div id="mc_embed_signup">
 								<form action="//whoismichaelsuen.us10.list-manage.com/subscribe/post?u=4ece89052ce51cd658a6e3155&amp;id=92a752c854" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
