Fixed script.js typo

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 						<div class="ten columns offset-by-three alpha omega animated" id="sign-up" data-animated="fadeInUp">
 							<h2>Let's <span class="typewriter">build</span>something together.</h2>
 							<div class="email-me fourteen columns offset-by-one alpha omega">
-								<p><strong>I'm booked for the rest of 2015.</strong> Say hello, and we'll get coffee.</p>
+								<p><strong>I'm not taking on any new projects in 2015.</strong> But — if you leave me your email, we'll have virtual coffee over Skype.</p>
 								<!-- Begin MailChimp Signup Form -->
 								<div id="mc_embed_signup">
 								<form action="//whoismichaelsuen.us10.list-manage.com/subscribe/post?u=4ece89052ce51cd658a6e3155&amp;id=92a752c854" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
@@ -262,7 +262,7 @@
 									<input type="text" value="" name="FNAME" class="" id="mce-FNAME" placeholder="First Name"><div class="input-validation"></div>
 							</div>
 							<div class="mc-field-group">
-								<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="E-mail"><div class="input-validation"></div>
+								<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email"><div class="input-validation"></div>
 							</div>
 								<div id="mce-responses" class="clear">
 									<div class="response" id="mce-error-response" style="display:none"></div>
@@ -375,7 +375,6 @@
 
 	</script>
 </div>
-<!--<p class="notice" onclick="location.href = '#contact'"><em>Want to have coffee over Skype?</em></p>-->
 <div id="tarpits">
 	<img src="https://farm8.staticflickr.com/7188/6970635809_aee672164c.jpg">
 </div>
